# arakna

./: .gitignore  README.md  arakna.code-workspace  environment-dev.yml  environment.yml  pyproject.toml  pytest.ini  setup.cfg
config/: h2qs.default.yaml
data/processed/isotonic/: p2ee_100k.json  p2ee_100k.pkl  p2ee_100k.test.parquet  p2em_100k.json  p2em_100k.pkl  p2em_100k.test.parquet
src/arakna/: config.py  manage.py
src/arakna/app/: __init__.py
src/arakna/process/: __init__.py  path.py  validation.py
src/arakna/process/h2qs/: __init__.py  stats.py
src/arakna/process/h2qs/plot/: __init__.py  prediction.py
src/arakna/process/h2qs/transform/: __init__.py  isotonic.py
