[tool.poetry]
name = "arakna"
version = "0.1.0"
description = "Self-similar traffic research"
authors = ["Roman Voronkin <roman.voronkin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^8.0.1"
Flask = "^2.0.1"
Jinja2 = "^3.0.1"
Werkzeug = "^2.0.1"
itsdangerous = "^2.0.1"
MarkupSafe = "^2.0.1"
numpy = "^1.21.2"
pandas = "^1.3.3"
pyarrow = "^5.0.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
